[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thom"
version = "0.1.1"
description = "Summarize research papers from arXiv using LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "thom contributors" }
]
keywords = [
    "arxiv",
    "research",
    "papers",
    "summarization",
    "llm",
    "ai",
    "science",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "litellm>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
thom = "thom.cli:main"

[project.urls]
Homepage = "https://github.com/thom-project/thom"
Documentation = "https://github.com/thom-project/thom#readme"
Repository = "https://github.com/thom-project/thom"
Issues = "https://github.com/thom-project/thom/issues"

[tool.hatch.build.targets.wheel]
packages = ["thom"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
